@@ -8,7 +8,7 @@
 .Nd read and write RDF syntax
 .Sh SYNOPSIS
 .Nm serdi
-.Op Fl abefhlqv
+.Op Fl abefhlqtv
 .Op Fl c Ar prefix
 .Op Fl i Ar syntax
 .Op Fl k Ar bytes
@@ -150,6 +150,9 @@ This is useful for keeping relative references within some directory.
 Parse
 .Ar string
 input instead of a file (terminates options).
+.Pp
+.It Fl t
+Write terser output without newlines.
 .Pp
 .It Fl v
 Display version information and exit.
